crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_escape.snap
---
source: crates/css_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  Token(
    kind: "Ident",
    len: 1,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 10,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Function",
    len: 4,
  ),
  Token(
    kind: "String",
    len: 8,
  ),
  Token(
    kind: "RightParen",
    len: 1,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 10,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Url",
    len: 8,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 10,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Url",
    len: 8,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 10,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Function",
    len: 4,
  ),
  Token(
    kind: "LeftSquare",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "String",
    len: 3,
  ),
  Token(
    kind: "RightSquare",
    len: 1,
  ),
  Token(
    kind: "RightParen",
    len: 1,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Function",
    len: 4,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "RightParen",
    len: 1,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Function",
    len: 4,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Function",
    len: 10,
  ),
  Token(
    kind: "Dimension",
    len: 2,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "LeftSquare",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "String",
    len: 3,
  ),
  Token(
    kind: "RightSquare",
    len: 1,
  ),
  Token(
    kind: "RightParen",
    len: 1,
  ),
  Token(
    kind: "RightParen",
    len: 1,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
  Token(
    kind: "LeftSquare",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "RightSquare",
    len: 1,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
  Token(
    kind: "LeftSquare",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "RightSquare",
    len: 1,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
  Token(
    kind: "LeftSquare",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "RightSquare",
    len: 1,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
  Token(
    kind: "LeftSquare",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 20,
  ),
  Token(
    kind: "RightSquare",
    len: 1,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
  Token(
    kind: "LeftSquare",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "RightSquare",
    len: 1,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 8,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
]
