crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_function.snap
---
source: crates/css_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  Token(
    kind: "Ident",
    len: 1,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 16,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Url",
    len: 83,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 16,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Function",
    len: 4,
  ),
  Token(
    kind: "String",
    len: 17,
  ),
  Token(
    kind: "RightParen",
    len: 1,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 16,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Function",
    len: 4,
  ),
  Token(
    kind: "String",
    len: 17,
  ),
  Token(
    kind: "RightParen",
    len: 1,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
]
