crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_ie_prodid.snap
---
source: crates/css_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  Token(
    kind: "Ident",
    len: 1,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 16,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 9,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Function",
    len: 5,
  ),
  Token(
    kind: "Ident",
    len: 11,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 1,
  ),
  Token(
    kind: "RightParen",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 16,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 9,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Function",
    len: 6,
  ),
  Token(
    kind: "Ident",
    len: 8,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 1,
  ),
  Token(
    kind: "RightParen",
    len: 1,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
]
