crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_important.snap
---
source: crates/css_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  Token(
    kind: "Ident",
    len: 1,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Dimension",
    len: 3,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 9,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 9,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 1,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 9,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Ident",
    len: 9,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Dimension",
    len: 4,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 9,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 7,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Dimension",
    len: 4,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 9,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Dimension",
    len: 5,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 9,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Dimension",
    len: 5,
  ),
  Token(
    kind: "Ident",
    len: 9,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 7,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 1,
  ),
  Token(
    kind: "String",
    len: 2,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 9,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 7,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Dimension",
    len: 3,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 9,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 2,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 9,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 2,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 9,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
]
