crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_inside.snap
---
source: crates/css_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  Token(
    kind: "Ident",
    len: 1,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "AtKeyword",
    len: 7,
  ),
  Token(
    kind: "String",
    len: 7,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
]
