crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_prop.snap
---
source: crates/css_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  Token(
    kind: "Ident",
    len: 1,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 11,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 9,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "LeftParen",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "RightParen",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Dimension",
    len: 4,
    unit: r#%,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
]
