crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_quotes.snap
---
source: crates/css_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  Token(
    kind: "Ident",
    len: 1,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 7,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "String",
    len: 12,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 7,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "String",
    len: 7,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
]
