crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_rule_at.snap
---
source: crates/css_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  Token(
    kind: "Ident",
    len: 1,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Dimension",
    len: 4,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 1,
  ),
  Token(
    kind: "AtKeyword",
    len: 6,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "AtKeyword",
    len: 6,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Dimension",
    len: 5,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
]
